--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +13,12 @@
     "@fortaine/openai": "^5.3.1",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "eslint": "^8.37.0",
-    "nodemon": "^2.0.22"
-  },
-  "type": "module"
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.2"
+  }
 }
