--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts"
+    "start": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts",
+    "fly": "cross-env NODE_ENV=development nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts"
   },
   "keywords": [],
   "author": "",
@@ -11,12 +12,15 @@
   "dependencies": {
     "@discordjs/voice": "^0.15.0",
     "@fortaine/openai": "^5.3.1",
+    "cross-env": "^7.0.3",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^3.2.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "eslint": "^8.37.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.2"
