--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "nodemon --watch \"src/\" --exec \"ts-node src/index.ts\" -e ts",
-    "fly": "tsc",
+    "tsc": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
