--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,7 @@ jobs:
       - name: Build app
         run: yarn tsc
 
-      - name: Deploy to Fly
-        uses: superfly/flyctl-actions@v1
-        with:
-          args: deploy
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
