--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^1.10.1",
     "@discordjs/voice": "^0.15.0",
     "@fortaine/openai": "^5.3.1",
     "cross-env": "^7.0.3",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
