--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@discordjs/voice": "^0.15.0",
     "@fortaine/openai": "^5.3.1",
     "cross-env": "^7.0.3",
-    "discord.js": "^14.8.0",
+    "discord-bot": "file:",
+    "discord.js": "^14.18.0",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "^0.7.0",
     "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
